# CLIuno-FastAPI-template

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  config.py  database.py  seed.py
src/dependencies/: auth.py
src/models/: models.py
src/routers/: auth.py  comments.py  follows.py  posts.py  roles.py  todos.py  users.py
src/schemas/: schemas.py
src/services/: auth_service.py
tests/: conftest.py  test_auth.py  test_auth_features.py  test_comments.py  test_follows.py  test_posts.py  test_roles.py  test_todos.py  test_users.py
