[project]
name = "cliuno-fastapi-template"
version = "1.0.0"
description = "CLIuno FastAPI Template - A production-ready FastAPI REST API template"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "fastapi[standard]>=0.135.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.10.0",
    "pwdlib[argon2]>=0.2.0",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
